fix align

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -33,7 +33,6 @@ and open the template in the editor.
 }
 
 .row-main {
-    margin-left: 70px;
     max-height: 480px;
     overflow-y: scroll;
 }
